# bardkeeper

./: .gitignore  CHANGELOG.md  COMPRESSION.md  LICENSE  README.md  pyproject.toml  setup.py
bardkeeper/: __init__.py  cli.py  config.py  database.py  rsync.py  sync_manager.py  utils.py
bardkeeper/ui/: __init__.py  menus.py  tables.py
src/bardkeeper/: __init__.py  __main__.py  config.py  exceptions.py
src/bardkeeper/cli/: main.py
src/bardkeeper/cli/ui/: menus.py  progress.py  tables.py
src/bardkeeper/core/: compression.py  rsync.py  ssh.py
src/bardkeeper/data/: database.py  models.py
src/bardkeeper/services/: sync_manager.py
tests/: test-cli.py  test-database.py  test_cli.py  test_config.py  test_rsync.py  test_sync_manager.py  tests_init.py
